--- a/index.html
+++ b/index.html
@@ -351,13 +351,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(94, 97, 107);">
-	               	<img src="images/portfolio/pn.jpeg" alt="Shutterbug">
-	               	<a href="https://github.com/manali5555/Chest_Xray-Pneumonia_Classification" class="overlay">              		                  
+	               	<img src="images/portfolio/Homepage.png" alt="Diabetes Predictors">
+	               	<a href="https://github.com/ambar9/DiabetesPredictor-App-MITAI" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Chest X-ray Pneumonia Classification</h3>	     					    
+	                     		<h3 class="folio-title">Diabetes Predictor App</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Computer Vision & Image Classification
+										Support Vector Machine
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
