--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="https://www.linkedin.com/in/ambar-gharat09"><i class="fa fa-linkedin"></i></a></li>
-		 <li><a href="https://github.com/ambar9"><i class="fa fa-github"></i></a></li>
-         <li><a href="https://www.instagram.com/_ambars9/"><i class="fa fa-instagram"></i></a></li>
-		 <li><a href="https://www.facebook.com/ambar.gharat/"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/ambar-gharat09" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+		 <li><a href="https://github.com/ambar9" target="_blank"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://www.instagram.com/_ambars9/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+		 <li><a href="https://www.facebook.com/ambar.gharat/" target="_blank"><i class="fa fa-facebook"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -338,7 +338,7 @@
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(94, 97, 107);">
                         <img src="images/portfolio/Diabeties_Prediction.png" alt="Diabetes Prediction">
-                        <a href="https://github.com/ambar9/DiabetesPredictor-App-MITAI" class="overlay">
+                        <a href="https://github.com/ambar9/DiabetesPredictor-App-MITAI" class="overlay" target="_blank">
                             <div class="folio-item-table">
                                 <div class="folio-item-cell">
                                     <h3 class="folio-title">Customer Segmentation</h3>
@@ -352,7 +352,7 @@
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(94, 97, 107);">
 	               	<img src="images/portfolio/Homepage.png" alt="Diabetes Predictors">
-	               	<a href="https://github.com/ambar9/DiabetesPredictor-App-MITAI" class="overlay">              		                  
+	               	<a href="https://github.com/ambar9/DiabetesPredictor-App-MITAI" class="overlay" target="_blank">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Diabetes Predictor App</h3>	     					    
@@ -368,7 +368,7 @@
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(211, 211, 211);">
 	               	<img src="images/portfolio/Sales_Dashboard.png" alt="Sales Dashboard">
-	                  <a href="https://github.com/ambar9/Sales_and_Customer_Data_Analysis_using_Tableau" class="overlay">             		                  
+	                  <a href="https://github.com/ambar9/Sales_and_Customer_Data_Analysis_using_Tableau" class="overlay" target="_blank">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Sales & Customer Data Analysis</h3>	     					    
@@ -384,7 +384,7 @@
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(211, 211, 211);">
 	               	<img src="images/portfolio/SQL_Data_Analysis.jpg" alt="SQL Project">
-	                  <a href="https://github.com/ambar9/SQL_Project_Data_Job_Analysis" class="overlay">                  	                 
+	                  <a href="https://github.com/ambar9/SQL_Project_Data_Job_Analysis" class="overlay" target="_blank">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Job Data Analysis</h3>	     					    
@@ -400,7 +400,7 @@
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(94, 97, 107);">
 	               	<img src="images/portfolio/music_data.jpg" alt="Music Data Analysis Project">
-	                  <a href="https://github.com/ambar9/SQL_Project_Music_Data_Analysis" class="overlay">             		                  
+	                  <a href="https://github.com/ambar9/SQL_Project_Music_Data_Analysis" class="overlay" target="_blank">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Music Data Analysis</h3>	     					    
@@ -416,7 +416,7 @@
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(94, 97, 107);"">
 	               	<img src="images/portfolio/Expense_Data.jpg" alt="Expense Data Analysis">
-	                  <a href="https://github.com/ambar9/SQL-Project-Expense-Data-Analysis" class="overlay">
+	                  <a href="https://github.com/ambar9/SQL-Project-Expense-Data-Analysis" class="overlay" target="_blank">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Expense Data Analysis</h3>	     					    
