--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="https://drive.google.com/file/d/1HPX_ssXgD82W1g7bNv2Q5B8cSt9OM9YF/view?usp=sharing" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/file/d/1BD57IJ4uBpXWvkh8sAyXfj1cCt4RC_XM/view" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -341,7 +341,7 @@
                         <a href="https://github.com/ambar9/DiabetesPredictor-App-MITAI" class="overlay" target="_blank">
                             <div class="folio-item-table">
                                 <div class="folio-item-cell">
-                                    <h3 class="folio-title">Customer Segmentation</h3>
+                                    <h3 class="folio-title">Diabetes Predictor App</h3>
                                     <span class="folio-types">Unsupervised Machine Learning Classification</span>
                                 </div>
                             </div>
@@ -351,11 +351,11 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(94, 97, 107);">
-	               	<img src="images/portfolio/Homepage.png" alt="Diabetes Predictors">
-	               	<a href="https://github.com/ambar9/DiabetesPredictor-App-MITAI" class="overlay" target="_blank">              		                  
+	               	<img src="images/portfolio/Homepage.png" alt="Student Performance Indicator">
+	               	<a href="https://github.com/ambar9/Student_Performance_Indicator_End_To_End_ML_Project" class="overlay" target="_blank">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Diabetes Predictor App</h3>	     					    
+	                     		<h3 class="folio-title">Student Performance Indicator</h3>	     					    
 		     					    	<span class="folio-types">
 										Support Vector Machine
 		     					      </span>		     		
