--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.png" alt="Profile Picture">
+   				<img src="images/Profile-pic.png" alt="Profile Picture">
 
    				 <p class="lead"> I am an aspiring Data Analyst/Scientist interested in Predictive Modeling, Data Visualization, Data Engineering & Analysis along with Business Analysis.</p>
 
