--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Open for Roles</h3>
-   			<p>Data Analyst | Data Scientist | Python Developer | AI Engineer </p>
+   			<p>Data Analyst | Data Scientist | Python Developer | Data Engineer | AI Engineer </p>
 
    			<ul class="info-list">
    				
