Added new project

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
+						<li><a class="smoothscroll"  href="#portfolio" title="">Projects</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
 					</ul>
@@ -183,7 +183,7 @@
 					</li>
 					<li>
 						<div class="progress percent70"><span>70%</span></div>
-						<strong>Statistics</strong>
+						<strong>Azure</strong>
 					</li>
 					<li>
 						<div class="progress percent70"><span>70%</span></div>
@@ -199,7 +199,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="https://drive.google.com/file/d/1BD57IJ4uBpXWvkh8sAyXfj1cCt4RC_XM/view" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/file/d/1IClFfUjiyw0TKQ4pmKbcCZLhFd7vzx58/view?usp=drive_link" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -334,6 +334,20 @@
 
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+
+				<div class="bgrid folio-item">
+					<div class="item-wrap" style="background-color: rgb(94, 97, 107);">
+						 <img src="images/portfolio/AW_project_image.jpg" alt="Azure-Medallion-Architecture-Project">
+						 <a href="https://github.com/ambar9/Azure_Adventure_Works_Data_Engineering_End_To_End_Project.git" class="overlay" target="_blank">
+							 <div class="folio-item-table">
+								 <div class="folio-item-cell">
+									 <h3 class="folio-title">Azure-Medallion-Architecture-Project</h3>
+									 <span class="folio-types">Azure Data Factory, Databricks, Synapse</span>
+								 </div>
+							 </div>
+						 </a>
+					</div>	               
+					 </div> <!-- /folio-item -->
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap" style="background-color: rgb(94, 97, 107);">
