adding new project

--- a/index.html
+++ b/index.html
@@ -337,6 +337,20 @@
 
 				<div class="bgrid folio-item">
 					<div class="item-wrap" style="background-color: rgb(94, 97, 107);">
+						 <img src="images/portfolio/nyc_taxi_project_architechture.png" alt="Azure Medallion Data Engineering: NYC Taxi & Delta Lake">
+						 <a href="https://github.com/ambar9/Azure_Medallion_Data_Engineering_NYC_Taxi_Delta_Lake.git" class="overlay" target="_blank">
+							 <div class="folio-item-table">
+								 <div class="folio-item-cell">
+									 <h3 class="folio-title">Azure Medallion Data Engineering: NYC Taxi & Delta Lake</h3>
+									 <span class="folio-types">Azure Data Factory, Databricks, Delta Tables</span>
+								 </div>
+							 </div>
+						 </a>
+					</div>	               
+					 </div> <!-- /folio-item -->
+
+				<div class="bgrid folio-item">
+					<div class="item-wrap" style="background-color: rgb(94, 97, 107);">
 						 <img src="images/portfolio/AW_project_image.jpg" alt="Azure-Medallion-Architecture-Project">
 						 <a href="https://github.com/ambar9/Azure_Adventure_Works_Data_Engineering_End_To_End_Project.git" class="overlay" target="_blank">
 							 <div class="folio-item-table">
